# sudoku_solver

./: .gitignore  README.md  app.py  note.py  postprocess.py  preprocess.py  pyproject.toml  run_all.py  solve.py
dataset/: sample1.csv
dataset/easy/: easy1.csv  easy2.csv  easy3.csv
dataset/hard/: hard1.csv  hard2.csv  hard3.csv
dataset/medium/: medium1.csv  medium2.csv  medium3.csv
dataset/user/: user1.csv
templates/: index.html  sample.html
